updating content and fixing name spacing issues

--- a/src/sass/components/_body.scss
+++ b/src/sass/components/_body.scss
@@ -11,3 +11,12 @@ body {
   background-color: $body-bg;
   overflow-x: hidden;
 }
+
+.modal-open {
+  overflow: hidden;
+}
+
+.modal-open #PuppyBowlPetHappens .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
