--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,45 +1,45 @@
+.modal-open {
+	padding: 0 !important;
+}
 
-	.modal-open {
-		padding: 0 !important;
-	}
+.modal {
+	padding: 0 !important;
+}
 
-	.modal {
-		padding: 0 !important;
-	}
+.modal-dialog {
+	margin: 0 auto;
+	width: auto;
+}
 
-	.modal-dialog {
-		margin: 0 auto;
-		width: auto;
-	}
-
-	.modal-content {
-		background: transparent;
-		border: none;
-		border-radius: 0;
-		box-shadow: none;
-		text-align: left;
-		button.close {
-			position: absolute;
-			right: 10px;
-			top: 30px;
-			z-index: 10;
-		}
-	}
-
-	.button-container {
-		position: relative;
-	}
-
+.modal-content {
+	background: transparent;
+	border: none;
+	border-radius: 0;
+	box-shadow: none;
+	text-align: left;
 	button.close {
-		color: #ffffff;
-		font-size: ceil(($font-size-base * 2.142));
-		float: none;
-		opacity: 1;
-		text-shadow: none;
-		&:hover,
-		&:focus {
-			color: #ffffff;
-			opacity: 1;
-		}
+		position: absolute;
+		right: 10px;
+		top: 30px;
+		z-index: 10;
 	}
+}
+
+.button-container {
+	position: relative;
+	z-index: 5;
+}
+
+button.close {
+	color: #ffffff;
+	font-size: ceil(($font-size-base * 2.142));
+	float: none;
+	opacity: 1;
+	text-shadow: none;
+	&:hover,
+	&:focus {
+		color: #ffffff;
+		opacity: 1;
+	}
+}
 
